fix long title wrapping and badge alignment for new and updated items

--- a/docs/src/css/_sidebar.scss
+++ b/docs/src/css/_sidebar.scss
@@ -37,6 +37,17 @@
     position: relative;
   }
 
+  .menu__list-item.new-content>a:not(.menu__link--sublist),
+  .menu__list-item.updated-content>a:not(.menu__link--sublist) {
+    height: auto !important;
+
+    > span {
+      overflow: visible;
+      -webkit-line-clamp: unset;
+      white-space: normal;
+    }
+  }
+
   .menu__list-item.new-content>a:not(.menu__link--sublist) {
     padding-right: 4rem;
   }
@@ -58,7 +69,8 @@
     line-height: 1;
     position: absolute;
     right: 0.75rem;
-    top: 0.375rem;
+    top: 50%;
+    transform: translateY(-50%);
     z-index: 1;
     pointer-events: none;
   }
